fixed uneven spacing.. could cause future issues if someone just posts an image or something.. but o well.
fixes #452

--- a/css/less/posts.less
+++ b/css/less/posts.less
@@ -187,8 +187,6 @@ p.wp-caption-text {
 	background: url(./images/icn-tags.png) no-repeat;
 }
 
-.post-meta .the-comment-link, .post-meta .post-link {
-}
 
 .post-meta .post-link {
 	margin-top: -1px;
@@ -489,7 +487,7 @@ a.post-permalink:hover {
 }
 
 .post.format-link .link-description {
-	margin-top: 20px;
+	padding: 20px 20px 0;
 }
 
 #standard-post-advertisement-image,
